{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 521,
  "lineage": "4f3f9c15-de15-4926-aee7-98148ad1e5db",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:loadbalancer/app/wordpress-alb/ad423aae7d59ef6a",
            "arn_suffix": "app/wordpress-alb/ad423aae7d59ef6a",
            "dns_name": "wordpress-alb-1801213378.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:loadbalancer/app/wordpress-alb/ad423aae7d59ef6a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "security_groups": [
              "sg-0d7d5680cc4a71f8b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0073bfc437d8159f6"
              },
              {
                "subnet_id": "subnet-0f71714c09ba57c0f"
              }
            ],
            "subnets": [
              "subnet-0073bfc437d8159f6",
              "subnet-0f71714c09ba57c0f"
            ],
            "tags": {
              "Environment": "Wordpress",
              "Name": "wordpress-alb",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "wordpress-alb",
              "Owner": "Dext"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-004c78650c1507339",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:loadbalancer/app/wordpress-alb/ad423aae7d59ef6a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Wordpress",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Owner": "Dext"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.ec2_complete.aws_instance.this",
            "module.ec2_complete.aws_spot_instance_request.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_tcp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "This is a fixed response",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener-rule/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b/6bb1e4e4e432b3cf",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "x-Gimme-Fixed-Response",
                    "values": [
                      "please",
                      "right now",
                      "yes"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener-rule/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b/6bb1e4e4e432b3cf",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b",
            "priority": 3,
            "tags": {
              "Environment": "Wordpress",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Owner": "Dext"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_http_tcp",
            "module.alb.aws_lb_target_group.main",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.ec2_complete.aws_instance.this",
            "module.ec2_complete.aws_spot_instance_request.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "www.youtube.com",
                    "path": "/watch",
                    "port": "#{port}",
                    "protocol": "HTTPS",
                    "query": "v=dQw4w9WgXcQ",
                    "status_code": "HTTP_302"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener-rule/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b/8a52bbf92b716815",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "video",
                    "value": "random"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener-rule/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b/8a52bbf92b716815",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:listener/app/wordpress-alb/ad423aae7d59ef6a/b08fdbdff5e12d6b",
            "priority": 5000,
            "tags": {
              "Environment": "Wordpress",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Owner": "Dext"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_http_tcp",
            "module.alb.aws_lb_target_group.main",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.ec2_complete.aws_instance.this",
            "module.ec2_complete.aws_spot_instance_request.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52",
            "arn_suffix": "targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "WP-20211127164159778700000004",
            "name_prefix": "WP-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Wordpress",
              "Name": "WP-",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "WP-",
              "Owner": "Dext"
            },
            "target_type": "instance",
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.ec2_complete.aws_instance.this",
            "module.ec2_complete.aws_spot_instance_request.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_ec2_01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52-20211127164201795700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52",
            "target_id": "i-0b6b20fd821a498b9"
          },
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.ec2_complete.aws_instance.this",
            "module.ec2_complete.aws_spot_instance_request.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "0.my_ec2_02",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52-20211127164201845300000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:847313801937:targetgroup/WP-20211127164159778700000004/dcac8bb529cf1a52",
            "target_id": "i-034fb48cdf75342f2"
          },
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.ec2_complete.aws_instance.this",
            "module.ec2_complete.aws_spot_instance_request.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_complete[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ce2fc392a4c0fbc",
            "arn": "arn:aws:ec2:eu-west-1:847313801937:instance/i-0b6b20fd821a498b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6b20fd821a498b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public.key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0697c432081a07890",
            "private_dns": "ip-192-168-0-14.eu-west-1.compute.internal",
            "private_ip": "192.168.0.14",
            "public_ip": "34.254.238.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:847313801937:key/afe5016e-a62f-415f-bd4f-28dcded535aa",
                "tags": {
                  "Name": "Wordpress-ebs-01"
                },
                "throughput": 0,
                "volume_id": "vol-0b757693417e82d45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073bfc437d8159f6",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-01",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-01",
              "Owner": "Dext"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0d7d5680cc4a71f8b"
            ]
          },
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_complete[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ce2fc392a4c0fbc",
            "arn": "arn:aws:ec2:eu-west-1:847313801937:instance/i-034fb48cdf75342f2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034fb48cdf75342f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public.key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd16087f92e18928",
            "private_dns": "ip-192-168-0-13.eu-west-1.compute.internal",
            "private_ip": "192.168.0.13",
            "public_ip": "18.202.78.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:847313801937:key/afe5016e-a62f-415f-bd4f-28dcded535aa",
                "tags": {
                  "Name": "Wordpress-ebs-02"
                },
                "throughput": 0,
                "volume_id": "vol-0a8ef40309a40ee66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073bfc437d8159f6",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-02",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-02",
              "Owner": "Dext"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0d7d5680cc4a71f8b"
            ]
          },
          "dependencies": [
            "data.template_cloudinit_config.user_data_wp",
            "module.alb.aws_lb.this",
            "module.db_default.module.db_instance.aws_db_instance.this",
            "module.db_default.module.db_instance.aws_db_instance.this_mssql",
            "module.db_default.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_default.module.db_instance.random_id.snapshot_identifier",
            "module.db_default.module.db_option_group.aws_db_option_group.this",
            "module.db_default.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_default.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db_default.random_password.master_password",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:security-group/sg-0d7d5680cc4a71f8b",
            "description": "Security group for EC2 instance",
            "egress": [],
            "id": "sg-0d7d5680cc4a71f8b",
            "ingress": [],
            "name": "Wordpress-20211127163742951100000002",
            "name_prefix": "Wordpress-",
            "owner_id": "847313801937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress",
              "Owner": "Dext"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2693872728",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7d5680cc4a71f8b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1558411103",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7d5680cc4a71f8b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3932760810",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7d5680cc4a71f8b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-1112965212",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0d7d5680cc4a71f8b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:security-group/sg-0beef99801e864c0a",
            "description": "Complete MySQL example security group",
            "egress": [],
            "id": "sg-0beef99801e864c0a",
            "ingress": [],
            "name": "wordpress-rds-20211127163742928000000001",
            "name_prefix": "wordpress-rds-",
            "owner_id": "847313801937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Wordpress",
              "Name": "wordpress-rds",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "wordpress-rds",
              "Owner": "Dext"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/24"
            ],
            "description": "MySQL access from within VPC",
            "from_port": 3306,
            "id": "sgrule-1542148254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0beef99801e864c0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:internet-gateway/igw-05bdb6beaff3238b3",
            "id": "igw-05bdb6beaff3238b3",
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05bdb6beaff3238b3",
            "id": "r-rtb-084ae68efa5a041b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084ae68efa5a041b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:route-table/rtb-0f6b5ba8e17dd22e9",
            "id": "rtb-0f6b5ba8e17dd22e9",
            "owner_id": "847313801937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1a",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1a",
              "Owner": "Dext"
            },
            "timeouts": null,
            "vpc_id": "vpc-004c78650c1507339"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:route-table/rtb-08bb6918289eb1dbb",
            "id": "rtb-08bb6918289eb1dbb",
            "owner_id": "847313801937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1b",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1b",
              "Owner": "Dext"
            },
            "timeouts": null,
            "vpc_id": "vpc-004c78650c1507339"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:route-table/rtb-084ae68efa5a041b5",
            "id": "rtb-084ae68efa5a041b5",
            "owner_id": "847313801937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-public",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-public",
              "Owner": "Dext"
            },
            "timeouts": null,
            "vpc_id": "vpc-004c78650c1507339"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06328419cebdf9dbc",
            "route_table_id": "rtb-0f6b5ba8e17dd22e9",
            "subnet_id": "subnet-0c6380f7c90068524"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f24a2647396ae924",
            "route_table_id": "rtb-08bb6918289eb1dbb",
            "subnet_id": "subnet-02b442681d7963b0d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8d704cca3a3e91d",
            "route_table_id": "rtb-0f6b5ba8e17dd22e9",
            "subnet_id": "subnet-08dca4f48174a794b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d80dd3a227d80149",
            "route_table_id": "rtb-08bb6918289eb1dbb",
            "subnet_id": "subnet-06c11a4fe4041f6ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae19f483e3463d9",
            "route_table_id": "rtb-084ae68efa5a041b5",
            "subnet_id": "subnet-0073bfc437d8159f6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047e00b81e299e0c4",
            "route_table_id": "rtb-084ae68efa5a041b5",
            "subnet_id": "subnet-0f71714c09ba57c0f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:subnet/subnet-0c6380f7c90068524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.64/28",
            "id": "subnet-0c6380f7c90068524",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-db-eu-west-1a",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-db-eu-west-1a",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:subnet/subnet-02b442681d7963b0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.80/28",
            "id": "subnet-02b442681d7963b0d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-db-eu-west-1b",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-db-eu-west-1b",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:subnet/subnet-08dca4f48174a794b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.32/28",
            "id": "subnet-08dca4f48174a794b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1a",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1a",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:subnet/subnet-06c11a4fe4041f6ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.48/28",
            "id": "subnet-06c11a4fe4041f6ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1b",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-private-eu-west-1b",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:subnet/subnet-0073bfc437d8159f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.0/28",
            "id": "subnet-0073bfc437d8159f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-public-eu-west-1a",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-public-eu-west-1a",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:subnet/subnet-0f71714c09ba57c0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.16/28",
            "id": "subnet-0f71714c09ba57c0f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress-public-eu-west-1b",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress-public-eu-west-1b",
              "Owner": "Dext"
            },
            "vpc_id": "vpc-004c78650c1507339"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:847313801937:vpc/vpc-004c78650c1507339",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-07a7a8b9aad413185",
            "default_route_table_id": "rtb-0dd9d1031995b9761",
            "default_security_group_id": "sg-0753fadf1b48ca619",
            "dhcp_options_id": "dopt-b1321cd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-004c78650c1507339",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dd9d1031995b9761",
            "owner_id": "847313801937",
            "tags": {
              "Environment": "Wordpress",
              "Name": "Wordpress",
              "Owner": "Dext"
            },
            "tags_all": {
              "Environment": "Wordpress",
              "Name": "Wordpress",
              "Owner": "Dext"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}